--- a/application.yml
+++ b/application.yml
@@ -12,6 +12,7 @@ mybatis:
   mapper-locations: classpath:sql/*Mapper.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
 logging:
   level:
     com:
