--- a/application.yml
+++ b/application.yml
@@ -4,6 +4,23 @@ spring:
     username: root
     url: jdbc:mysql://47.94.157.37:3306/movie?serverTimeZone=UTC&characterEncoding=UTF-8
     password: zy5201314.
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      initial-size: 8
+      min-idle: 1
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      validation-query: select 'x' FROM DUAL
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-open-prepared-statements: 20
+      max-pool-prepared-statement-per-connection-size: 20
+      filters: stat
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+      use-global-data-source-stat: true
 eureka:
   client:
     service-url:
